# gale-shared

./: CMakeLists.txt  Kconfig  README.md  env_esp32c3  env_qemu  west.yml
boards/: bsim.conf  nrf5340bsim_nrf5340_cpuapp.overlay  nrf54l15_fstab.dtsi  nrf54l15_partitions.dtsi  nrf54l15bsim_nrf54l15_cpuapp.overlay
boards/nrf5340bsim/: app.overlay  cpunet.overlay  environment
boards/nrf54l15bsim/: app.conf  app.overlay  environment
boards/nrf54l15dk/: environment
codechecker/: .codechecker.json
devicetree/: qemu.overlay
dts/: README.md
dts/shared/: nrf5340bsim_nrf5340_cpunet.dtsi
ipc/: CMakeLists.txt  Kconfig
ipc/include/: gale_ipc.hpp
net_app/: CMakeLists.txt  Kconfig.sysbuild  sysbuild.cmake
net_app/node/: .clang-format  .gitignore  CMakeLists.txt  prj.conf
net_app/node/src/: main.cpp
net_app_relay/: CMakeLists.txt  VERSION
net_app_relay/boards/: nrf5340bsim_nrf5340_cpunet.overlay
net_app_relay/include/tests/: multicore.hpp
net_app_relay/src/: main.cpp
net_app_relay/src/tests/: multicore.cpp
radio/: Kconfig.sysbuild  sysbuild.cmake
share/codechecker/: skipfile.txt
share/editor/: .clang-format  .clang-tidy  .editorconfig  .neocmakelint.toml
soc/: bsim.conf  bsim_defconfig  global.conf
sysbuild/: CMakeLists.txt  Kconfig
zephyr/: CMakeLists.txt  module.yml
